welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.code
def caughtSpeeding(speed:Int, isBirthday:Boolean):Int = {
	if (isBirthday==false)
	{
		 match {
  case speed<60 => return 0
  case speed<=80 && speed>60  => return 1
  case speed>81 => return 2
	}
	else
		match {
  case speed<65 => return 0
  case speed<=85 && speed>65  => return 1
  case speed>86 => return 2
	}


	
}
}